--- a/flower.html
+++ b/flower.html
@@ -324,6 +324,11 @@
           { name: "Bubblegum poppers", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
           { name: "Cherry candy", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
           { name: "Pink Cadillac", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
+         ]
+      },
+        {
+        group: "SHAKE",
+        items: [
           { name: "Candy fumez (shake)", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
           { name: "Sherb candy (shake)", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
         ]
