--- a/flower.html
+++ b/flower.html
@@ -358,8 +358,8 @@
       {
         group: "SHAKE",
         items: [
-          { name: "Candy fumez (shake)", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
-          { name: "Sherb candy (shake)", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
+          { name: "Candy fumez", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
+          { name: "Sherb candy", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
         ]
       }
     ];
@@ -385,8 +385,8 @@
       "silver-back-gorilla": "SilverBackGorilla.JPG",
       "bubblegum-poppers": "BubblegumPoppers.JPG",
       "pink-cadillac": "PinkCadillac.JPG",
-      "candy-fumez-shake": "CandyFumezShake.JPG",
-      "sherb-candy-shake": "SherbCandyShake.JPG"
+      "candy-fumez": "CandyFumezShake.JPG",
+      "sherb-candy": "SherbCandyShake.JPG"
     };
 
     function normalizeKey(s){
