--- a/flower.html
+++ b/flower.html
@@ -358,8 +358,8 @@
       {
         group: "SHAKE",
         items: [
-          { name: "Candy fumez", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
-          { name: "Sherb candy", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
+          { name: "Candy fumez (shake)", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
+          { name: "Sherb candy (shake)", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
         ]
       }
     ];
