Fix image file extensions to lowercase
Updated image file names to use lowercase extensions.

--- a/flower.html
+++ b/flower.html
@@ -381,12 +381,12 @@
       "ready-to-trap": "ReadytoTrap.JPG",
       "sherbert": "Sherbet.JPG",
       "verzace": "Verzace.JPG",
-      "peach-rings": "PeachRings.JPG",
-      "silver-back-gorilla": "SilverBackGorilla.JPG",
-      "bubblegum-poppers": "BubblegumPoppers.JPG",
-      "pink-cadillac": "PinkCadillac.JPG",
-      "candy-fumez": "CandyFumezShake.JPG",
-      "sherb-candy": "SherbCandyShake.JPG"
+      "peach-rings": "PeachRings.jpg",
+      "silver-back-gorilla": "SilverBackGorilla.jpg",
+      "bubblegum-poppers": "BubblegumPoppers.jpg",
+      "pink-cadillac": "PinkCadillac.jpg",
+      "candy-fumez": "CandyFumezShake.jpg",
+      "sherb-candy": "SherbCandyShake.jpg"
     };
 
     function normalizeKey(s){
