--- a/flower.html
+++ b/flower.html
@@ -68,7 +68,7 @@
 
     .group{margin-bottom:36px}
 
-    /* ✅ group header now supports an optional logo */
+    /* ✅ group header supports optional logo */
     .group-head{
       display:flex;
       align-items:center;
@@ -163,6 +163,27 @@
     }
     .price.na{opacity:.55}
     .item:hover .price{border-color:var(--gold-soft)}
+
+    /* ✅ Effects row */
+    .effects{
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      margin-top:10px;
+    }
+    .effect-pill{
+      font-size:11px;
+      font-weight:900;
+      letter-spacing:.5px;
+      text-transform:uppercase;
+      border-radius:999px;
+      padding:6px 10px;
+      background:#fff;
+      border:1px solid rgba(0,0,0,0.10);
+      color:#111;
+      white-space:nowrap;
+    }
+    .item:hover .effect-pill{border-color:var(--gold-soft)}
 
     .actions-row{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
     .btn{
@@ -327,66 +348,53 @@
       document.getElementById("ageNo").onclick=()=>{window.location.href="https://www.google.com"}
     })();
 
-    // ===== MENU (updated: shakes grouped on their own) =====
+    // ===== MENU (LIVE: matches uploaded menu image) =====
     // Prices correspond to: 8th(3.5g) / Q(7g) / Half(14g) / OZ(28g)
     const MENU_SPEC = [
       {
         group: "CA$$H RULE$",
-        groupLogo: "images/CasshrulesOfficial.png", // ✅ logo in header
+        groupLogo: "images/CasshrulesOfficial.png",
         items: [
-          { name: "JELLY FISH", prices: { g3_5: "N/A", g7: 110, g14: 200, g28: 380 } },
-          { name: "Frosted peaches", prices: { g3_5: 50, g7: 100, g14: 180, g28: 340 } },
-          { name: "SUGAR SHOCK", sale: true, prices: { g3_5: 45, g7: 90, g14: 160, g28: 320 } },
-          { name: "Zaamatic", prices: { g3_5: 35, g7: 60, g14: 110, g28: 200 } },
-          { name: "Ready to trap", prices: { g3_5: 35, g7: 60, g14: 110, g28: 200 } }
+          { name: "Zaamatic", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } }
         ]
       },
       {
         group: "LOOSE LINEUP",
         items: [
-          { name: "Verzace", prices: { g3_5: 35, g7: 60, g14: 110, g28: 200 } },
-          { name: "Space candy", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
-          { name: "Fruit snacks", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
-          { name: "Sherbert", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
-          { name: "Peach rings", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
-          { name: "Silver back gorilla", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
+          { name: "Double bubble", prices: { g3_5: 30, g7: 50, g14: 100, g28: 180 } },
+          { name: "Pink certz", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
+          { name: "Space candy", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
+          { name: "Fruit snacks", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
+          { name: "Silver back gorilla", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
           { name: "Bubblegum poppers", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
-          { name: "Cherry candy", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } },
-          { name: "Pink Cadillac", prices: { g3_5: 25, g7: 45, g14: 90, g28: 160 } }
-        ]
-      },
-      {
-        group: "SHAKE",
-        items: [
-          { name: "Candy Fumez (shake)", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
-          { name: "Sherb Candy (shake)", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
+          { name: "Sherbert", prices: { g3_5: 25, g7: 40, g14: 80, g28: 140 } },
+          { name: "Pink Cadillac", prices: { g3_5: 25, g7: 40, g14: 80, g28: 140 } },
+          { name: "Candy fumez (exotic shake)", prices: { g3_5: 30, g7: 45, g14: 80, g28: 150 } },
+          { name: "Sherb candy (shake)", prices: { g3_5: 25, g7: 40, g14: 60, g28: 100 } }
         ]
       }
     ];
 
-    // ===== Images (optional) =====
+    // ===== Images (optional; keeps fallbacks stable) =====
+    // Keys should match slugifyName(name)
     const IMAGE_MAP = {
-      "adl": "ADL.JPG",
-      "cherry-candy": "CherryCandy.JPG",
-      "chronic-candy": "ChronicCandy.JPG",
-      "frosted-peaches": "FrostedPeaches.JPG",
-      "jelly-fish": "JellyFish.JPG",
-      "rainbow-belts": "RainbowBelts.JPG",
-      "space-candy": "SpaceCandy.JPG",
-      "sugar-shock": "SugarShock.JPG",
       "zaamatic": "Zaamatic.JPG",
-      "blow-pop": "BlowPop.JPG",
-      "crazzzy": "Crrazzy.JPG",
+
+      // new uploaded filenames
+      "double-bubble": "Double-bubble.png",
+      "pink-certz": "Pink-Certz.png",
+
+      // existing images
+      "space-candy": "SpaceCandy.JPG",
       "fruit-snacks": "FruitStripes.JPG",
-      "ready-to-trap": "ReadytoTrap.JPG",
-      "sherbert": "Sherbet.JPG",
-      "verzace": "Verzace.JPG",
-      "peach-rings": "PeachRings.jpg",
       "silver-back-gorilla": "SilverBackGorilla.jpg",
-      "bubblegum-poppers": "BubblegumPoppers.jpg",
+      "bubblegum-poppers": "BubbleGumPoppers.jpg",
+      "sherbert": "Sherbet.JPG",
       "pink-cadillac": "PinkCadillac.jpg",
-      "candy-fumez": "CandyFumezShake.jpg",
-      "sherb-candy": "SherbCandyShake.jpg"
+
+      // IMPORTANT: shake IDs must match products.json ids
+      "candy-fumez-shake": "CandyFumesShake.jpg",
+      "sherb-candy-shake": "SherbCandyShake.jpg"
     };
 
     function normalizeKey(s){
@@ -395,6 +403,7 @@
     function slugifyName(s){
       return String(s||"")
         .toLowerCase()
+        .replace(/\(exotic shake\)/g,"-shake")
         .replace(/\(shake\)/g,"-shake")
         .replace(/[^a-z0-9]+/g,"-")
         .replace(/(^-|-$)/g,"");
@@ -421,6 +430,19 @@
       return "";
     }
 
+    function renderEffects(effects){
+      if(!effects || !Array.isArray(effects) || effects.length === 0) return null;
+      const row = document.createElement("div");
+      row.className = "effects";
+      effects.slice(0,4).forEach(e=>{
+        const pill = document.createElement("span");
+        pill.className = "effect-pill";
+        pill.textContent = e;
+        row.appendChild(pill);
+      });
+      return row;
+    }
+
     function openProduct(id){
       location.href = "product.html?id=" + encodeURIComponent(id);
     }
@@ -441,7 +463,6 @@
           const group=document.createElement("div");
           group.className="group";
 
-          // ✅ group header (with optional logo)
           const head=document.createElement("div");
           head.className="group-head";
 
@@ -518,6 +539,12 @@
               prices.appendChild(p);
             });
             main.appendChild(prices);
+
+            // ✅ Effects featured on card (from products.json)
+            if(found && found.effects){
+              const fx = renderEffects(found.effects);
+              if(fx) main.appendChild(fx);
+            }
 
             const actions=document.createElement("div");
             actions.className="actions-row";
